--- a/README
+++ b/README
@@ -1,5 +1,5 @@
 I trained a Random Forest model and built a classifier to differentiate a fake Bank Note using the features received from applying a Wavelet transform to the images.
-I used Flask Web Application Framework to deploy the trained model as a set of APIs that takes in numbers or a file as arguments and gives out output
+I used Flask Web Application Framework to deploy the trained model(from the pickle file) as a set of APIs that takes in numbers or a file as arguments and gives out output
 Then, I used Flasgger to create the basic UI so that it can accept the inputs from the browser and gives the outputs.
 I explored streamlit too, created few buttons and text input elements. Streamlit gave me much more freedom to include html code and other UI elements without writing them from scratch
 I used Continuumio Anaconda image from Docker Hub as a base docker image and added all the dependencies and created a docker image of the model. 
